<resources>
    <string name="app_name">Quol</string>
    <string name="login">Login</string>
    <string name="login_message">Login to your Account</string>

    <string name="signUp">Sign Up</string>
    <string name="signUp_message">Create your Account</string>
    <string name="userAuth_firstName">First Name</string>
    <string name="userAuth_lastName">Last Name</string>
    <string name="userAuth_email">Email</string>
    <string name="userAuth_password">Password</string>
    <string name="userAuth_birthdate">Birthdate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>