<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="name@domain.com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeLabel" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="700px"
        android:layout_height="200px"
        android:layout_marginStart="72dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="72dp"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keepLoggedInCb" />

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="76dp"
        android:text="Login to Quol"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="4dp"
        android:text="@string/userAuth_email"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="5dp"
        android:text="@string/userAuth_password"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="175dp"
        android:text="Forgot Password? Click Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/signUpRedirectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="110dp"
        android:text="Don't have an account?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <CheckBox
        android:id="@+id/keepLoggedInCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="25dp"
        android:text="Keep me logged in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordLabel" />

    <TextView
        android:id="@+id/signUpRedirect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@+id/signUpRedirectLabel"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>